--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p class="text-l italic text-center">Completed in <strong>Sem 2, 2022</strong> :)</p>
 
 <div class="grid gap-7 m-5 p-5 grid-cols-2 lg:grid-cols-3 items-start">
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportAlexis.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -45,7 +45,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportAyden.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -97,7 +97,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportChengIan.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -123,7 +123,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportDrew.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -149,7 +149,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportEdwin.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -171,7 +171,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportEuLer.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -201,7 +201,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportGreene.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -235,7 +235,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportHugo.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -260,7 +260,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKabir.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -288,7 +288,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKaiWen.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -316,7 +316,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKane.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -340,7 +340,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKenneth.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -366,7 +366,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportMahir.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -392,7 +392,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportRyan.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -421,7 +421,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportTyler.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -446,7 +446,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportWeeChong.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -474,7 +474,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportWenkai.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
@@ -500,7 +500,7 @@
             </section>
         </a>
     </div>
-    <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportYuebin.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
