install tailwind properly

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>DA Projects</title>
-    <link rel="icon" href="imgs/icon.png">
-    <style>
-        .card-height {
-            aspect-ratio: 3 / 4;
-        }
-    </style>
+    <link rel="icon" href="./imgs/icon.png" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body class="bg-black text-white">
