--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>DA Projects</title>
-    <link rel="icon" href="./imgs/icon.png" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./imgs/icon.png"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 
 <body class="bg-black text-white">
@@ -22,7 +22,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Alexis.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -45,7 +45,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ayden.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -93,15 +93,49 @@
         </a>
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportBrandon.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Brandon.png"
+                         alt="Graph">
+                </div>
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-2xl lg:text-3xl font-bold">Books: a New Insight</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Brandon</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        Books have been here since the beginning of history, playing a key role in keeping events and
+                        ideas safe for anyone to see later on. As we continue to develop and grow, books too have done
+                        the same. Gone are the days where the only way you could find a book is by looking for it in a
+                        library or a store. Books have evolved into many forms online, pushed by one main player, a
+                        major distributor, Amazon.
+                        Amazon has allowed for anyone to be able to access books online, even publish books themselves
+                        without anyone helping them at all. But this has led to the problem of information overload.
+                        While the 'over 80,000 books' the front page says is not incorrect, it hides from the true scale
+                        that they have, with a reported over 30 million books available for purchase in just 2014. One
+                        can only imagine that this number has continued to grow since the 8 years this information has
+                        stopped becoming publicly available.
+                        With all this known, it's easy to see how difficult it is to stand out in the sea of books
+                        available. In this project, I will analyse the factors contributing to a book's success, which
+                        allows it to overcome this statistical hurdle.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportChengIan.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/ChengIan.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl lg:text-3xl font-bold">Analysis of live streaming of games on Twitch and Youtube</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Analysis of live streaming of games on Twitch and
+                    Youtube</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Cheng Ian</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -123,7 +157,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Drew.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -149,7 +183,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Edwin.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -171,7 +205,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/EuLer.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -201,11 +235,12 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Greene.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl lg:text-3xl font-bold">Popularity of Tourism in Various Countries before the COVID-19
+                <h2 class="text-2xl lg:text-3xl font-bold">Popularity of Tourism in Various Countries before the
+                    COVID-19
                     Pandemic</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Greene</strong></p>
                 <div class="h-2 flex-none"></div>
@@ -235,7 +270,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Hugo.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -260,7 +295,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kabir.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -288,7 +323,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/KaiWen.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -316,7 +351,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kane.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -340,7 +375,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kenneth.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -366,7 +401,7 @@
             <div>
                 <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Mahir.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -392,7 +427,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ryan.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -421,7 +456,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Tyler.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -446,7 +481,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/WeeChong.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -474,7 +509,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Wenkai.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
@@ -500,7 +535,7 @@
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
                     <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Yuebin.png"
-                        alt="Graph">
+                         alt="Graph">
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
