--- a/index.html
+++ b/index.html
@@ -452,6 +452,30 @@
         </a>
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
+        <a href="reports/ProjectReportTheo.html" class="no-underline flex flex-col max-h-full" target="_blank">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Theo.png"
+                         alt="Graph">
+                </div>
+            </div>
+            <section class="p-5 min-h-0 flex flex-col">
+                <h2 class="text-2xl lg:text-3xl font-bold">A Study of Fandom Wikis through Lexical Analysis</h2>
+                <p class="text-zinc-200 pl-1.5">by <strong>Theo</strong></p>
+                <div class="h-2 flex-none"></div>
+                <div class="overflow-y-scroll p-1.5">
+                    <p class="text-zinc-200 italic">
+                        There exists many resources that document various aspects of entertainment, whether it be 
+                        books, games, movies, or tv shows. One popular example of this is fandom.com, which claims to 
+                        be hosted on over 385000 domains, with over 50000000 pages. However, there exist few studies 
+                        of fandom's wikis, likely due to the lack of updated repositories. Hence, I intend to conduct 
+                        a study on various aspects of Fandom's wiki repository.
+                    </p>
+                </div>
+            </section>
+        </a>
+    </div>
+    <div class="drop-shadow-xl bg-gradient-to-br from-slate-800 to-teal-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportTyler.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
                 <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
